--- a/sass/opo.scss
+++ b/sass/opo.scss
@@ -114,7 +114,7 @@ label {
     line-height: 3em;
 }
 
-input[type="text"], select, textarea { 
+input, select, textarea { 
     flex: 2 1 0;
     -webkit-appearance: none;
     padding: 1em;
@@ -136,8 +136,10 @@ input[type="submit"], input[type="checkbox"] {
     flex: initial;
     display: inline;
     border-radius: $radius;    
-    cursor: pointer;    
+    cursor: pointer; 
 }
+input[type="checkbox"]:checked { background: $color; } 
+input:read-only { opacity: 0.5; }
 
 button, input[type="submit"] {
     -webkit-appearance: none;
@@ -155,6 +157,10 @@ button, input[type="submit"] {
         box-shadow: 0 0 2px 2px $color;
     }    
 }
+
+input:required:valid { box-shadow: 0 0 2px 2px $green; }
+
+
 #confirm {
     display: inline-block;
     padding: 1em;
